完善包结构