@@ -7,7 +7,7 @@ PermSize=256m
 MaxPermSize=512m
 pid=${name}".pid"
 logName="all"
-jarName=`ls | grep "$name" | sort -r | head -n 1`
+jarName=`ls | grep -e "^\${name}.*jar$" | sort -r | head -n 1`
 
 
 start(){
@@ -16,20 +16,17 @@ start(){
 		echo "$jarName is running !"
 		exit 0;
 	else
-		echo -n  "start $jarName ..."
+		echo -n  "start ${jarName} ..."
 		nohup java 	-Xmx${Xmx} -Xms${Xms} -Xmn${Xmn}   \
-			-XX:PermSize=${PermSize} \
-			-XX:MaxPermSize=${MaxPermSize} \
 			-XX:+UseParNewGC \
 			-XX:+UseConcMarkSweepGC \
 			-XX:CMSFullGCsBeforeCompaction=3 \
 			-XX:CMSInitiatingOccupancyFraction=60 -jar ${jarName} >/dev/null 2>&1 &   #注意：必须有&让其后台执行，否则没有pid生
 		[ $? -eq 0 ] && echo   "[ok]"
 		echo $! > ${pid}   # 将jar包启动对应的pid写入文件中，为停止时提供pi
-		currentLogFile=`ls ./logs/ | grep  "$logName*.log" |sort -r | head -n 1`
+		currentLogFile=`ls ./logs/ | grep  "$logName" |sort -r | head -n 1`
 		#echo $currentLogFile
-		tail -f  "$currentLogFile"  
-		#
+		tail -f  "./logs/$currentLogFile"
       fi
 }
 #停止方法
@@ -62,4 +59,6 @@ restart)
   exit 1
   ;;
 esac
+
+
 
